--- a/src/sass/components/BurgerMenu/_burgermenu.scss
+++ b/src/sass/components/BurgerMenu/_burgermenu.scss
@@ -5,7 +5,7 @@
   width: 400px;
   height: 100%;
   background-color: #fff;
-  padding: 20px; 
+  padding: 20px;
   position: fixed;
   top: 0;
   left: 0;
@@ -127,6 +127,22 @@
         &.open {
           display: flex;
         }
+      }
+    }
+  }
+}
+
+@media (max-width: 425px) {
+  .burgerMenu {
+    width: 100%;
+    padding: 10px;
+    left: 0;
+    bottom: 0;
+    overflow-y: auto;
+    .burgerList {
+      h4 {
+        padding-bottom: 5px;
+        padding-left: 10px;
       }
     }
   }
