--- a/src/sass/components/Header/_header.scss
+++ b/src/sass/components/Header/_header.scss
@@ -73,7 +73,7 @@ header {
             font-size: 12px;
           }
         }
-        p {
+        .controlP {
           font-size: 14px;
           margin-right: 25px;
         }
@@ -112,7 +112,7 @@ header {
           left: 0;
           bottom: 0;
           width: 100vw;
-          height: 100vh;
+          height: 200vh;
           opacity: 0;
           visibility: hidden;
           transition: opacity 1.5s ease-in-out, visibility 1.5s ease-in-out;
