--- a/src/sass/pages/Cart/_cart.scss
+++ b/src/sass/pages/Cart/_cart.scss
@@ -3,8 +3,7 @@
 .mycart {
   background-color: white;
   position: fixed;
-  top: 0%;
-  bottom: 0%;
+  top: 0;
   right: -100%;
   width: 350px;
   padding: 0px;
@@ -109,7 +108,8 @@
     bottom: 30px;
     width: 90%;
     margin: 0 auto;
-    right:18px;
+    right: 18px;
+  
     .totalNum {
       background-color: rgb(255, 255, 255);
       height: 60px;
@@ -117,22 +117,30 @@
       width: 100%;
       align-items: center;
       justify-content: space-between;
+  
       h4 {
         font-size: 15px;
         font-weight: 700;
       }
-
+  
       p {
         font-size: 16px;
       }
     }
-
+  
     a {
       width: 100%;
       text-align: center;
       @include learnMore;
+      
+      &.disabled {
+        opacity: 0.5;
+        cursor: not-allowed; 
+        pointer-events: none;  
+      }
     }
   }
+  
 }
 
 @media (max-width: 767px) {
