--- a/src/sass/pages/Cart/_cartPage.scss
+++ b/src/sass/pages/Cart/_cartPage.scss
@@ -12,7 +12,7 @@
       align-items: center;
       justify-content: center;
       gap: 20px;
-      margin-top: 10%;
+      margin-top: 130px;
       h2 {
         @include heading;
         font-size: 60px !important;
@@ -279,7 +279,6 @@
   .cartPage {
     .container {
       .row {
-        margin-top: 15%;
         h2 {
           font-size: 35px !important;
         }
