--- a/src/sass/pages/CartDetails/_anwendung.scss
+++ b/src/sass/pages/CartDetails/_anwendung.scss
@@ -4,7 +4,7 @@
   .container {
     width: 80%;
     margin: 0 auto;
-    .row {
+    .rowA {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -71,17 +71,18 @@
     }
     .anwendungTwo{
       display: none;
+      // background: red !important;
     }
   }
 }
 @media (max-width:990px){
   .anwendung{
     .container{
-      .row{
+      .rowA{
         display: none;
       }
       .anwendungTwo{
-        display: block;
+        display: block ;
       }
     }
   }
