--- a/src/sass/pages/Home/_hero.scss
+++ b/src/sass/pages/Home/_hero.scss
@@ -10,9 +10,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
     gap: 20px;
-    img {
+    video {
       display: block;
       width: 100%;
       height: auto;
