--- a/src/sass/components/Header/_header.scss
+++ b/src/sass/components/Header/_header.scss
@@ -53,6 +53,7 @@ header {
           display: flex;
           gap: 7px;
           cursor: pointer;
+          align-items: center;
         }
         .quantities {
           cursor: pointer;
