--- a/src/sass/components/inputsGroups.scss
+++ b/src/sass/components/inputsGroups.scss
@@ -1,4 +1,5 @@
 .inputsGroups {
+  height: 100%;
   .selectContainer {
     position: relative;
     width: 100%;
@@ -7,7 +8,7 @@
     select {
       width: 100%;
       padding: 17px 15px;
-      border-radius: 3px;
+      border-radius: 7px;
       border: 1px solid #ccc;
       font-size: 13px;
       outline: none;
@@ -36,18 +37,29 @@
   .userName {
     display: flex;
     gap: 10px;
-    margin-top: 20px;
+    margin-top: 12px;
+    .custom {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+    }
   }
   .textInput {
-    margin-top: 20px;
+    margin-top: 12px;
   }
   .postal {
     display: flex;
     gap: 10px;
-    margin-top: 20px;
+    margin-top: 12px;
+    .custom {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+    }
   }
   .inputAnswear {
     display: flex;
+    flex-direction: column;
     position: relative;
     margin-top: 20px;
     .question {
