--- a/src/sass/pages/Home/_bestseller.scss
+++ b/src/sass/pages/Home/_bestseller.scss
@@ -4,7 +4,7 @@
     width: 98%;
     margin: 0 auto;
     .row {
-      display: flex;
+      display: flex; 
       flex-direction: column;
       align-items: center;
       justify-content: center;
@@ -39,7 +39,7 @@
             }
           }
           img {
-            width: 360px;
+            // width: 360px;
             height: 405px;
           }
           .cartText {
@@ -188,6 +188,9 @@
       .cart {
         flex: 0 0 auto;
         width: 300px;
+        img{
+          width: 300px;
+        }
         .cartText {
           h3 {
             font-size: 23px !important;
@@ -205,11 +208,11 @@
         display: flex;
         flex-wrap: wrap;
         .carts {
-          display: flex;
-          align-items: center;
-          flex-wrap: wrap;
-          justify-content: center;
-          gap: 15px;
+          // display: flex;
+          // align-items: center;
+          // flex-wrap: wrap;
+          // justify-content: center;
+          // gap: 15px;
           .cart {
             flex: 0 0 auto;
             width: 260px;
@@ -237,7 +240,7 @@
           grid-template-columns: repeat(4, 1fr) !important;
           .cart {
             flex: 0 0 auto;
-            width: 210px;
+            width: 230px;
             a {
               font-size: 12px !important;
             }
@@ -366,6 +369,8 @@
 @media (max-width: 410px) {
   .bestSeller {
     .container {
+      padding-left: 1rem;
+      padding-right: 1rem;
       .row {
         .carts {
           display: grid !important;
