--- a/src/sass/pages/Cart/_cart.scss
+++ b/src/sass/pages/Cart/_cart.scss
@@ -7,10 +7,10 @@
   right: -100%;
   width: 350px;
   padding: 0px;
-  height: 100vh;
+  height: 101vh;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
   transition: 0.9s all;
-  z-index: 999;
+  z-index: 110000000000000000;
   &.open {
     right: 0;
   }
