--- a/src/sass/components/BurgerMenu/_burgermenu.scss
+++ b/src/sass/components/BurgerMenu/_burgermenu.scss
@@ -11,6 +11,7 @@
   left: 0;
   bottom: 0;
   overflow-y: auto;
+  z-index: 10;
   .menu {
     display: flex;
     justify-content: space-between;
@@ -131,7 +132,29 @@
     }
   }
 }
+.overlaay {
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 200vh;
+  opacity: 0;
+  visibility: hidden;
+  // transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
+  z-index: 5;
+  // display: none;
 
+  &.activee {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+.openBurger {
+  display: none;
+}
 @media (max-width: 425px) {
   .burgerMenu {
     width: 100%;
