--- a/src/sass/components/Footer/_footer.scss
+++ b/src/sass/components/Footer/_footer.scss
@@ -8,9 +8,9 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    h3 {
+    h3 { 
       font-size: 60px;
-      font-weight: 600;
+      font-weight: 900;
       color: white;
     }
     .p {
@@ -41,6 +41,23 @@ footer {
         &:hover {
           background-color: #1d1931;
         }
+      }
+    }
+    .confirmationMessage{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      font-size: 30px;
+      margin-top: 30px;
+      margin-bottom: 10px;
+      font-family: "Dancing Script";
+      p{
+        color: white;
+        font-size: 16px;
+        font-weight: 600;
+
       }
     }
   }
