--- a/src/sass/components/Footer/_footer.scss
+++ b/src/sass/components/Footer/_footer.scss
@@ -8,7 +8,7 @@ footer {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    h3 { 
+    h3 {
       font-size: 60px;
       font-weight: 900;
       color: white;
@@ -43,7 +43,7 @@ footer {
         }
       }
     }
-    .confirmationMessage{
+    .confirmationMessage {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -53,11 +53,10 @@ footer {
       margin-top: 30px;
       margin-bottom: 10px;
       font-family: "Dancing Script";
-      p{
+      p {
         color: white;
         font-size: 16px;
         font-weight: 600;
-
       }
     }
   }
@@ -201,10 +200,10 @@ footer {
         align-items: center;
         justify-content: center;
         gap: 10px;
-        button{
+        button {
           width: 80%;
         }
-        input{
+        input {
           width: 85%;
         }
       }
@@ -215,6 +214,21 @@ footer {
           display: flex;
           flex-wrap: wrap;
           padding-top: 10px;
+        }
+      }
+    }
+  }
+}
+@media (max-width: 320px) {
+  footer {
+    .container {
+      .row {
+        .footerContentBottom {
+          .iconLogo {
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: row-reverse;
+          }
         }
       }
     }
