--- a/src/sass/components/_reviewModul.scss
+++ b/src/sass/components/_reviewModul.scss
@@ -9,19 +9,21 @@
   align-items: center;
   justify-content: center;
   backdrop-filter: blur(5px);
+  z-index: 2000; // 
 }
 
 .commentModul {
+  position: fixed;
+  top: 0;
+  max-height: 100vh;
   background: #fff;
   padding: 20px;
   width: 650px;
   border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
-  position: relative;
-  top: 0;
-  max-height: 100vh; // Maksimum yükseklik ekleyerek ekranın dışına taşmasını engelle
   overflow-y: auto;
+  z-index: 2100; //
   .icon {
     position: absolute;
     top: 10px;
