--- a/src/sass/pages/CartDetails/_cartDetail.scss
+++ b/src/sass/pages/CartDetails/_cartDetail.scss
@@ -23,8 +23,8 @@
           justify-content: center;
           padding-right: 2px;
           img {
-            width: 100px;
-            height: 110px;
+            width: 90px;
+            height: 100px;
             object-fit: cover;
             cursor: pointer;
           }
@@ -297,3 +297,20 @@
     }
   }
 }
+@media (max-width: 320px) {
+  .cardDetail {
+    .row {
+      .productMore {
+        .productMoreImg {
+          .moreImages {
+            img {
+              width: 60px;
+              height: 75px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
