--- a/src/sass/pages/CartDetails/_comments.scss
+++ b/src/sass/pages/CartDetails/_comments.scss
@@ -527,7 +527,8 @@
                 .reviewer {
                   .comentDate {
                     display: block;
-                    margin-left: 100px;
+                    margin-left: 25px;
+                    margin-top: 20px;
                   }
                 }
               }
