--- a/src/sass/pages/CartDetails/_weAlsoRecom.scss
+++ b/src/sass/pages/CartDetails/_weAlsoRecom.scss
@@ -8,6 +8,7 @@
     justify-content: space-around;
     align-items: center;
     .weAlsoRecomHead {
+      margin-left: 20px;
       h2 {
         @include heading;
       }
@@ -15,7 +16,7 @@
     .paginationsIcon {
       display: flex;
       gap: 10px;
-      z-index: 998;
+      z-index: 0;
       position: absolute;
       right: 30px;
       .navigationIcon {
@@ -26,7 +27,8 @@
       display: flex;
       align-items: end;
       justify-content: end;
-      width: 72%;
+      width: 75%;
+      z-index: -2;
       .mySwiper {
         width: 100%;
         margin: 15px auto;
@@ -207,12 +209,22 @@
           margin: 0 auto;
           .swiperSlidePage {
             .cart {
-              img{
+              img {
                 width: 235px;
               }
             }
           }
         }
+      }
+    }
+  }
+}
+
+@media (max-width: 320px) {
+  .weAlsoRecom {
+    .row {
+      .weAlsoRecomHead {
+        margin: 0;
       }
     }
   }
