--- a/src/sass/pages/Home/_bestseller.scss
+++ b/src/sass/pages/Home/_bestseller.scss
@@ -5,20 +5,20 @@
     width: 98%;
     margin: 0 auto;
     .row {
-      display: flex; 
+      display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       width: 100%;
-      h3 { 
+      h3 {
         @include heading;
       }
       .carts {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         gap: 30px;
-
         .cart {
+          width: 360px;
           position: relative;
           display: flex;
           flex-direction: column;
@@ -40,7 +40,6 @@
             }
           }
           img {
-            // width: 360px;
             height: 405px;
           }
           .cartText {
@@ -110,8 +109,9 @@
             position: absolute;
             bottom: 33%;
             left: 0;
+            right: 2px;
             background: white;
-            width: 100%;
+            width: 102%;
             max-height: 0;
             color: black;
             display: flex;
@@ -189,7 +189,7 @@
       .cart {
         flex: 0 0 auto;
         width: 300px;
-        img{
+        img {
           width: 300px;
         }
         .cartText {
@@ -337,6 +337,22 @@
                 position: absolute;
                 left: 15px;
                 bottom: 40px;
+              }
+            }
+            &:hover {
+              .hoverDiv {
+              bottom: 42%;
+                max-height: 120px;
+                .hoverImages {
+                  .hoverImgs {
+                    img {
+                      width: 20px;
+                      height: 16px;
+                      cursor: pointer;
+                      transition: transform 0.4s ease-in;
+                    }
+                  }
+                }
               }
             }
           }
