--- a/src/sass/pages/Home/_discoversec.scss
+++ b/src/sass/pages/Home/_discoversec.scss
@@ -71,9 +71,9 @@
 @media (max-width: 749px) {
   .discoverSec {
     .row {
-display: none;
+      display: none;
     }
-    .discoverTwo{
+    .discoverTwo {
       display: block;
     }
   }
@@ -112,5 +112,11 @@ display: none;
         }
       }
     }
+  }
+}
+@media (max-width: 320px) {
+  .discoverSec {
+    width: 100%;
+    padding: 0;
   }
 }
