--- a/src/sass/pages/_filter.scss
+++ b/src/sass/pages/_filter.scss
@@ -471,7 +471,7 @@
     }
   }
 }
-@media (max-width: 765px) {
+@media (max-width: 768px) {
   .filterPage {
     .filteredProducts {
       ul {
@@ -578,7 +578,7 @@
       padding: 35px;
       width: 100%;
     }
-    .filteredProducts{
+    .filteredProducts {
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -589,7 +589,7 @@
       }
       ul {
         li {
-         .cart {
+          .cart {
             width: 100%;
             margin-bottom: 10px;
             img {
@@ -608,6 +608,21 @@
               padding: 8px 10px;
             }
           }
+        }
+      }
+    }
+  }
+}
+@media (max-width: 320px) {
+  .filterPage {
+    .filter-menu {
+      margin: 0px 20px 20px 5px;
+    }
+    .filteredProducts{
+      ul{
+        li{
+          padding-right: 40px;
+          padding-left: 0;
         }
       }
     }
